[package]
name = "arsync"
version = "0.1.0"
edition = "2021"
description = "A lightning-fast Agent Skills syncing tool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
fs_extra = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tempfile = "3.25.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.25.0"
